Fixed spacing on mobile.

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ a {
       margin-bottom: 40px;
     }
     .main {
+      padding: 0 20px;
       margin-bottom: -40px;
     }
 }
